syntax = "proto3";

package astria.sequencer.v1;

// import "tendermint/types/types.proto";
import "astria/sequencer/v1/data.proto";

// helper type - these should get parsed into a map from namespace to a vector of IndexedTransactions
message NamespacedIndexedTransactions {
    bytes namespace = 1;
    repeated IndexedTransaction txs = 2;
}

// SequencerBlock
message SequencerBlock {
    // block_hash refers to the sequencer chain's block hash that this is created from
    bytes block_hash = 1;
    Header header = 2;
    Commit last_commit = 3;
    repeated IndexedTransaction sequencer_transactions = 4;
    // FIXME: the current nested array layout results in bad allocation behavior on deserialization
    // see https://github.com/astriaorg/astria/issues/31
    repeated NamespacedIndexedTransactions rollup_transactions = 5;
}
